send data through hashrouter

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,6 @@
     <title>Cine X</title>
   </head>
   <body>
-    <div id="container">
-    </div>  
+    <div id="container"></div>  
   </body>
 </html>
